<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_register_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.foodies.nero.studentbenefitshub.RegisterUser"
    android:background="@mipmap/signup_background">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:background="@color/common_google_signin_btn_text_light_disabled">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@mipmap/userslogo"
            android:id="@+id/imageView"
            android:layout_weight="2"
            android:elevation="7dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_weight="1"
            android:id="@+id/emailEdit"
            android:paddingLeft="10dp"
            android:background="@drawable/roundededitbox"
            android:hint="@string/e_mail"
            android:layout_margin="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/holo_blue_dark" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEdit"
            android:paddingLeft="10dp"
            android:background="@drawable/roundededitbox"
            android:layout_margin="10dp"
            android:hint="@string/password"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/holo_blue_dark" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:ems="10"
            android:id="@+id/passwordConfirmEdit"
            android:background="@drawable/roundededitbox"
            android:layout_margin="10dp"
            android:hint="@string/confirm_password"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/holo_blue_dark" />

        <Button
            android:text="@string/sign_up"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/buttonSignUp"
            android:layout_weight="1"
            android:background="@drawable/drawablebutton"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textSize="20sp"/>

        <TextView
            android:text="@string/already_member_signin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/textViewAlreadyMember"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:gravity="bottom|center_horizontal" />

    </LinearLayout>
</LinearLayout>
